--- a/RpcTest/RpcTest/RpcTest.vcxproj
+++ b/RpcTest/RpcTest/RpcTest.vcxproj
@@ -139,7 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bdesvc_c.c" />
+    <ClCompile Include="bdesvc_s.c" />
     <ClCompile Include="Client.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="bdesvc.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Midl Include="bdesvc.idl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
